tests/NormalTests/paczka1/small_fuzzy/69432711.err
Error in line 10: NHUfZA2aYre S473 64,9
Error in line 13: hjH3ziUeb A642 11,4
